Fixing body not fitting width on smaller displays.

--- a/output.css
+++ b/output.css
@@ -809,6 +809,7 @@ nav {
     width: 100vw;
     overflow-x: hidden;
     position: relative;
+    touch-action: none;
   }
   .intro {
     width: 100%;
@@ -819,12 +820,19 @@ nav {
   }
   .intro-background {
     width: 100%;
+    overflow-x: hidden;
+    touch-action: none;
   }
   main {
     width: 100%;
+    overflow-x: hidden;
+    touch-action: none;
   }
   .body-canvas {
+    height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    touch-action: none;
   }
   .container {
     width: auto;
@@ -977,6 +985,10 @@ nav {
   .overview p {
     font-size: 1.3rem;
     text-align: center;
+  }
+  .body-canvas {
+    height: 100%;
+    width: 100%;
   }
 }
 
